--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -1,137 +1,138 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Trie Dictionary Online</title>
-        <link rel="icon" href="{% static 'img/trilogo_.png' %}">
-        <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-              integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Trie Dictionary Online</title>
+    <link rel="icon" href="{% static 'img/trilogo_.png' %}">
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
-        <style>
-            .main-card {
-                width: 40rem;
-                height: 12rem;
-                transition: 0.5s;
-                margin-top: 3rem;
-                border-radius: 20px;
-                backdrop-filter: blur(5px);
-                background-color: rgba(240, 248, 255, 0.65);
-                box-shadow: rgba(255, 0, 0, 0.32) 0 3px 90px 10px;
-            }
+    <style>
+        .main-card {
+            width: 40rem;
+            height: 12rem;
+            transition: 0.5s;
+            margin-top: 3rem;
+            border-radius: 20px;
+            backdrop-filter: blur(5px);
+            background-color: rgba(240, 248, 255, 0.65);
+            box-shadow: rgba(255, 0, 0, 0.32) 0 3px 90px 10px;
+        }
 
-            .main-card:hover {
-                transform: translateY(-3px);
-                background-color: rgba(227, 231, 250, 0.92);
-                box-shadow: rgba(97, 3, 3, 0.83) 0 10px 45px 10px;
-            }
-        </style>
-    </head>
-    <body>
+        .main-card:hover {
+            transform: translateY(-3px);
+            background-color: rgba(227, 231, 250, 0.92);
+            box-shadow: rgba(97, 3, 3, 0.83) 0 10px 45px 10px;
+        }
+    </style>
+</head>
+<body>
 
-        <div class="container">
-            {#===========================HEADER=============================#}
-            <pre class="text-center text-light display-2 mb-0"
-               style='height: 250px;
-                       margin-top: 2rem;
-                       padding-top: 55px;
-                       font-weight: bold;
-                       background-size: 125px;
-                       background-position-y: 31%;
-                       background-position-x: 47.8%;
-                       background-repeat: no-repeat;
-                       font-family: "Segoe UI Light",serif;
-                       text-shadow: rgba(10,10,10,0.5) 0 6px 3px;
-                       filter: drop-shadow(0 5px 5px rgba(10,10,10,0.9));
-                       background-image: url("{% static 'img/trilogo_.png' %}");
-                       '>
+<div class="container">
+    {#===========================HEADER=============================#}
+    <pre class="text-center text-light display-2 mb-0"
+         style='height: 250px;
+                 margin-top: 2rem;
+                 padding-top: 55px;
+                 font-weight: bold;
+                 background-size: 125px;
+                 background-position-y: 31%;
+                 background-position-x: 47.8%;
+                 background-repeat: no-repeat;
+                 font-family: "Segoe UI Light",serif;
+                 text-shadow: rgba(10,10,10,0.5) 0 6px 3px;
+                 filter: drop-shadow(0 5px 5px rgba(10,10,10,0.9));
+                 background-image: url("{% static 'img/trilogo_.png' %}");
+                 '>
 <span style="font-weight: 600;">  Trie</span>
 Dictionary Online</pre>
-            {#    <img class="mx-auto d-block" width="350rem" height="140rem" src="{% static 'img/Untitled-1.png' %}" alt="">#}
-            <img class="mx-auto d-block" width="300rem" height="75rem" src="{% static 'img/header-1.png' %}" alt="">
-            {#===========================MAIN CARD=============================#}
+    {#    <img class="mx-auto d-block" width="350rem" height="140rem" src="{% static 'img/Untitled-1.png' %}" alt="">#}
+    <img class="mx-auto d-block" width="300rem" height="75rem" src="{% static 'img/header-1.png' %}" alt="">
+    {#===========================MAIN CARD=============================#}
 
-            <div class="card mx-auto main-card">
-                <div class="card-body">
-                    <ul class="nav justify-content-center mb-3" style="border-bottom: 2px solid #383838;">
-                        <li class="nav-item">
-                            <a class="nav-link fw-bold" style="color: #303030;" data-bs-toggle="collapse" href="#AboutBox"
-                               role="button"
-                               aria-expanded="false" aria-controls="AboutBox">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link fw-bold" style="color: #303030;" data-bs-toggle="collapse" href="#HelpBox"
-                               role="button"
-                               aria-expanded="false" aria-controls="HelpBox">Help</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link fw-bold" style="color: #303030;" data-bs-toggle="collapse" href="#SearchWordBox"
-                               role="button"
-                               aria-expanded="true" aria-controls="SearchWordBox">Search Word</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link fw-bold" style="color: #303030;" data-bs-toggle="collapse" href="#AddWordBox"
-                               role="button"
-                               aria-expanded="false" aria-controls="AddWordBox">Add Word</a>
-                        </li>
-                    </ul>
-                    <div class="row" id="NavGroup">
-                        <div class="collapse multi-collapse" id="AboutBox" data-bs-parent="#NavGroup">
+    <div class="card mx-auto main-card">
+        <div class="card-body">
+            <ul class="nav justify-content-center mb-3" style="border-bottom: 2px solid #383838;">
+                <li class="nav-item">
+                    <a class="nav-link fw-bold" style="color: #303030;" data-bs-toggle="collapse" href="#AboutBox"
+                       role="button"
+                       aria-expanded="false" aria-controls="AboutBox">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link fw-bold" style="color: #303030;" data-bs-toggle="collapse" href="#HelpBox"
+                       role="button"
+                       aria-expanded="false" aria-controls="HelpBox">Help</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link fw-bold" style="color: #303030;" data-bs-toggle="collapse" href="#SearchWordBox"
+                       role="button"
+                       aria-expanded="true" aria-controls="SearchWordBox">Search Word</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link fw-bold" style="color: #303030;" data-bs-toggle="collapse" href="#AddWordBox"
+                       role="button"
+                       aria-expanded="false" aria-controls="AddWordBox">Add Word</a>
+                </li>
+            </ul>
+            <div class="row" id="NavGroup">
+                <div class="collapse multi-collapse" id="AboutBox" data-bs-parent="#NavGroup">
                                     <pre>
 This project developed by:
 Seyed Mohsen Razavi Zadegan Jahromi     ||| 40030489
 Seyed Mahdi Mahdavi Mortazavi (theMHD)  ||| 40030490
                                     </pre>
+                </div>
+                <div class="collapse multi-collapse" id="HelpBox" data-bs-parent="#NavGroup">
+                    here is help
+                </div>
+                <div class="collapse multi-collapse show mt-3" id="SearchWordBox" data-bs-parent="#NavGroup">
+                    <form action="{% url 'search_word' %}" method="POST">
+                        {% csrf_token %}
+                        <div class="row">
+                            <div class="col-10">
+                                <input class="form-control"
+                                       style="background-color: rgba(0,0,0,0); border-color: #303030" type="text"
+                                       placeholder="some thing like word ...." name="word">
+                            </div>
+                            <div class="col-2">
+                                <button type="submit" class="btn btn-outline-dark">Search</button>
+                            </div>
                         </div>
-                        <div class="collapse multi-collapse" id="HelpBox" data-bs-parent="#NavGroup">
-                            here is help
-                        </div>
-                        <div class="collapse multi-collapse show mt-3" id="SearchWordBox" data-bs-parent="#NavGroup">
-                            <form action="{% url 'search_word' %}" method="POST">
-                                {% csrf_token %}
-                                <div class="row">
-                                    <div class="col-10">
-                                        <input class="form-control"
-                                               style="background-color: rgba(0,0,0,0); border-color: #303030" type="text"
-                                               placeholder="some thing like word ...." name="word">
-                                    </div>
-                                    <div class="col-2">
-                                        <button type="submit" class="btn btn-outline-dark">Search</button>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                        <div class="collapse multi-collapse mt-3" id="AddWordBox" data-bs-parent="#NavGroup">
-                            <form action="{% url 'add_word' %}" method="POST">
-                                {% csrf_token %}
-                                <div class="row">
-                                    <div class="col-10">
-                                        <input class="form-control"
-                                               style="background-color: rgba(0,0,0,0); border-color: #303030" type="text"
-                                               placeholder="some thing like word ...." name="word">
-                                    </div>
-                                    <div class="col-2">
-                                        <button type="submit" class="btn btn-outline-dark">Add</button>
-                                    </div>
+                    </form>
+                </div>
+                <div class="collapse multi-collapse mt-3" id="AddWordBox" data-bs-parent="#NavGroup">
+                    <form action="{% url 'add_word' %}" method="POST">
+                        {% csrf_token %}
+                        <div class="row">
+                            <div class="col-10">
+                                <input class="form-control"
+                                       style="background-color: rgba(0,0,0,0); border-color: #303030" type="text"
+                                       placeholder="some thing like word ...." name="word">
+                            </div>
+                            <div class="col-2">
+                                <button type="submit" class="btn btn-outline-dark">Add</button>
+                            </div>
 
-                                </div>
-                            </form>
                         </div>
-                    </div>
+                    </form>
                 </div>
             </div>
         </div>
+    </div>
+</div>
 
-        <div class="wave" style="height: 15rem"></div>
-        <div class="wave" style="height: 13rem"></div>
-        <div class="wave" style="height: 10rem"></div>
-        <div class="wave" style="height: 7rem"></div>
-        <div class="wave" style="height: 4rem"></div>
-        <div class="wave" style="height: 2rem"></div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-                crossorigin="anonymous"></script>
+<div class="wave" style="height: 15rem"></div>
+<div class="wave" style="height: 13rem"></div>
+<div class="wave" style="height: 10rem"></div>
+<div class="wave" style="height: 7rem"></div>
+<div class="wave" style="height: 4rem"></div>
+<div class="wave" style="height: 2rem"></div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 
-    </body>
+</body>
 </html>
